2007-03-17  Quentin Mathe <qmathe@club-internet.fr>

	* etoile.make: 
	Fixed a typo which prevented real frameworks like PopplerKit to export its 
	headers and library file properly, then any applications which depend on it 
	to compile.
	Added code to have a symbolic libFrameworkName.so pointing on 
	frameworkName.framework/Versions/Current/libFrameworkName.so.
	As a side effect repository build should be fixed (after being broken for a
	while... too bad). 
	Modified $(PROJECT_NAME) references to be always prefixed by 'lib' on 
	library cleaning. It might correct clean or distclean only done partially.
	Also corrected issue #8484 by removing commented out debug statements in 
	the code, therefore the repository should build on SuSE too now.

2007-02-27  Quentin Mathe <qmathe@club-internet.fr>

	* Frameworks/Services/User: Removed Mollusk reference since it is not part 
	trunk anymore.

2007-02-16  Quentin Mathe <qmathe@club-internet.fr>

	* Frameworks/GNUmakefile: Modified to include SystemConfig in the build
	process since Hardware now uses it. This should fix the repository 
	build.

2007-02-16  Quentin Mathe <qmathe@club-internet.fr>

	* Bundles/WildMenus: Moved to Deprecated.

2007-02-08  Quentin Mathe <qmathe@club-internet.fr>

	* Services/User/GNUmakefile: Included Vindaloo by default in Etoile build 
	process.

2007-02-08  Quentin Mathe <qmathe@club-internet.fr>

	Warning: 
	1) Run ./setdown.sh on your system before updating or remove all 
	gnustep lib links in /usr/lib, ditto for gnustep  tools in 
	/usr/local/bin
	2) Now the environment should be launched with /usr/local/bin/etoile 
	or ~/etoile and not path/etoile_system anymore.
	* setup.sh: Replaced linking libs into /usr/lib by new script 'etoile' 
	which takes care of sourcing GNUstep.h as an equivalent yet better
	solution. The script is generated on the fly and finally installed in 
	/usr/local/bin or ~/bin.
	* setdown.sh: Symetrical update to match the aforementioned 
	modifications.
